--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-@import url(resret.css);
+@import url('resret.css');
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 html {
   font-family: "Roboto", sans-serif;
+  
 }
 body {
- line-height: 26px;
+  line-height: 26px;
 }
 a {
   text-decoration: none;
@@ -29,18 +30,19 @@ h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-flow: wrap;
 }
 .about-box, .design-box {
-    width: 540px;
+    max-width: 540px;
 }
 .header {
   background-color: rgb(2, 5, 9);
   padding: 35px 0;
 }
 .container {
-  width: 1320px;
+  max-width: 1320px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 20px;
 }
 .logo {
   letter-spacing: 8px;
@@ -60,7 +62,7 @@ h2 {
     display: block;
     text-align: center;
 }
-.design {
+.section_1 {
   background: rgba(255, 206, 56, 0.2);
   padding: 155px 0 180px;
 }
@@ -79,7 +81,8 @@ margin-bottom: 45px;
   border: none;
 }
 
-.about {
+.section_2,
+.section_3 {
   background: rgba(0, 207, 250, 0.1);
   padding: 85px 0px;
 }
@@ -114,18 +117,391 @@ margin-bottom: 45px;
   padding: 35px 0;
 }
 .icon {
-	width: 40px;
-	height: 40px;
+	max-width: 40px;
+	max-height: 40px;
 	fill: rgb(255, 255, 255);
+  transition: all linear .3s;
 }
 
 .icon:hover {
 	fill: red;
+  transition: all linear .3s;
 }
 .social {
   display: flex;
   padding-top: 10px;
   justify-content: center;
   column-gap: 5px;
-
 }
+
+img {
+  max-width: 100%;
+}
+
+/* ADAPTIVE a.k.a GRADIENT WORLD a.k.a SON OF A UNICORN xD */ 
+
+
+/*-------------------- ADAPTIVE 1320PX -------------------- */
+
+@media screen and (max-width: 1320px) {
+  .container {
+    max-width: 1100px;
+  }
+.header {
+  background: linear-gradient(#000000 65%, #94d4ff);
+  padding: 30px 5px; /* (was 35) */
+}
+
+a {
+  color: rgb(124, 148, 255);
+  /* font-size: 16px; (default it's ok) */ 
+  font-weight: 500; /* (little bit more than default) */
+}
+
+.block-list {
+  column-gap: 35px;
+}
+
+.block-list:nth-child(1) > li > a.active {
+  color: rgb(94, 255, 0); /* (always active) */
+}
+
+.block-list > li a:hover {
+  color: rgb(255, 187, 234);
+}
+
+.section_1 {
+  background: linear-gradient(#3bf1ca 25%, #f36767 );
+  padding: 120px 5px 150px; /*  (before was 155 0 180) */
+}
+
+h1 {
+  font-size: 64px; /* (made bigger) */
+  margin-bottom: 35px;
+}
+
+.container p {
+font-size: 18px; /* (FOR ALL <P>, little bit more than default) */
+}
+
+.btn {
+  padding: 20px 33px 20px 33px;
+  background: linear-gradient(#000000 65%, #94d4ff);
+  font-size: 18px;
+  color: rgb(124, 148, 255);
+  font-weight: 500;
+}
+
+.btn:hover {
+  background: linear-gradient(#000000 25%, #ff9100);
+  color: rgb(94, 255, 0);
+}
+
+.section_2,
+.section_3 {
+  background:linear-gradient(#f36767 25%, #3bf1ca);
+  padding: 75px 5px; /* (same sections) */
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 36px;
+}
+
+.code-img {
+  max-width: 90%;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+
+.projects {
+  padding: 60px 5px;
+  background: linear-gradient(#3bf1ca 25%, #f36767 );
+}
+
+.fz,
+.fs {
+  color: #ffffff;
+  font-weight: 600;
+}
+
+.footer { 
+  background: linear-gradient(#3bf1ca 10%, #94d4ff );
+  color: rgb(0, 0, 0);
+}
+
+.social {
+  column-gap: 20px;
+}
+
+.icon {
+	max-width: 44px;
+	max-height: 44px;
+  fill: rgb(255, 61, 71);
+}
+}
+
+/*-------------------- ADAPTIVE 992PX -------------------- */
+
+@media screen and (max-width: 992px) {
+  .header {
+    background: linear-gradient(#000000 65%, #94d4ff);
+    padding: 25px 5px; /* (was 35) */
+  }
+  
+  a {
+    color: rgb(124, 148, 255);
+    /* font-size: 16px; (default it's ok) */ 
+    font-weight: 500; /* (little bit more than default) */
+  }
+  
+  .block-list {
+    column-gap: 35px;
+  }
+  
+
+  .block-list:nth-child(1) > li > a.active {
+    color: rgb(94, 255, 0); /* (always active) */
+  }
+  
+  .block-list > li a:hover {
+    color: rgb(255, 187, 234);
+  }
+  
+  .section_1 {
+    background: linear-gradient(#3bf1ca 25%, #f36767 );
+    padding: 100px 5px 120px; /*  (before was 155 0 180) */
+  }
+  
+  h1 {
+    font-size: 64px; /* (made bigger) */
+    margin-bottom: 30px;
+  }
+  
+  .container p {
+  font-size: 22px; /* (FOR ALL <P>, little bit more than default) */
+  }
+  
+  .btn {
+    padding: 20px 33px 20px 33px;
+    background: linear-gradient(#000000 65%, #94d4ff);
+    font-size: 18px;
+    color: rgb(124, 148, 255);
+    font-weight: 500;
+  }
+  
+  .btn:hover {
+    background: linear-gradient(#000000 25%, #ff9100);
+    color: rgb(94, 255, 0);
+  }
+  
+  .section_2,
+  .section_3 {
+    background:linear-gradient(#f36767 25%, #3bf1ca);
+    padding: 60px 5px; /* (same sections) */
+  }
+  
+  h2 {
+    font-weight: 600;
+    font-size: 36px;
+  }
+  
+  .code-img {
+    max-width: 90%;
+    margin: 0 auto;
+    margin-bottom: 40px;
+    margin-top: 40px;
+  }
+  
+
+.container {
+  max-width: 960px;
+}
+
+/* .projects {
+  max-width: 900px;
+} */
+
+.card {
+  display: flex;
+  flex-flow: wrap;
+  flex: 1 1 30%;
+}
+
+/* .card.img {
+  display: flex;
+  flex: 1 1 33%;
+  flex-wrap: wrap;
+} */
+
+  .flex-box > .card > .card-img {
+    padding: 50px 5px;
+  }
+  
+  .fz,
+  .fs {
+    color: #000000;
+    font-weight: 600;
+  }
+  
+  .footer {
+    background: linear-gradient(#3bf1ca 10%, #94d4ff );
+    color: rgb(0, 0, 0);
+    padding: 0 5px 35px;
+  }
+  
+  .social {
+    column-gap: 25px;
+  }
+  
+  .icon {
+    max-width: 44px;
+    max-height: 44px;
+    fill: rgb(255, 61, 71);
+  }
+
+  .fs {
+    font-size: 24px;
+    color: rgba(255, 255, 255, 1);
+    font-weight: 100;
+    padding-right: 8px;
+  }
+  .fz {
+    color: rgba(255, 255, 255, 1);
+    display: flex;
+    align-items: center;
+    font-weight: 100;
+    padding-left: 8px;
+    
+  }
+  }
+
+  /*-------------------- ADAPTIVE 768PX -------------------- */
+
+@media screen and (max-width: 768px) {
+  .header {
+    background: linear-gradient(#000000 65%, #94d4ff);
+    padding: 15px 25px; /* (was 35) */
+  }
+  
+  a {
+    color: rgb(124, 148, 255);
+    /* font-size: 16px; (default it's ok) */ 
+    font-weight: 500; /* (little bit more than default) */
+  }
+  
+  .block-list {
+    column-gap: 5px;
+    display: none;
+  }
+  
+  .block-list:nth-child(1) > li > a.active {
+    color: rgb(94, 255, 0); /* (always active) */
+  }
+  
+  .block-list > li a:hover {
+    color: rgb(255, 187, 234);
+  }
+  
+  .section_1 {
+    background: linear-gradient(#3bf1ca 25%, #f36767 );
+    padding: 60px 5px 80px; /*  (before was 155 0 180) */
+  }
+  
+  h1 {
+    font-size: 56px; /* (made bigger) */
+    margin-bottom: 20px;
+  }
+  
+  .container p {
+  font-size: 18px; /* (FOR ALL <P>, little bit more than default) */
+  }
+  
+  .btn {
+    padding: 15px 27px;
+    background: linear-gradient(#000000 65%, #94d4ff);
+    font-size: 16px;
+    color: rgb(124, 148, 255);
+    font-weight: 400;
+  }
+  
+  .btn:hover {
+    background: linear-gradient(#000000 25%, #ff9100);
+    color: rgb(94, 255, 0);
+  }
+  
+  .section_2,
+  .section_3 {
+    background:linear-gradient(#f36767 25%, #3bf1ca);
+    padding: 40px 5px; /* (same sections) */
+  }
+  
+  h2 {
+    font-weight: 500;
+    font-size: 28px;
+  }
+  
+  .code-img {
+    max-width: 100%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  
+
+.container {
+  max-width: 720px;
+}
+
+/* .projects {
+  max-width: 900px;
+} */
+
+.card {
+  display: flex;
+  flex-flow: wrap;
+  flex: 1 1 48%;
+}
+
+  .flex-box > .card > .card-img {
+    padding: 30px 5px;
+  }
+  
+  .fz,
+  .fs {
+    color: #000000;
+    font-weight: 400;
+  }
+  
+  .footer {
+    background: linear-gradient(#3bf1ca 10%, #94d4ff );
+    color: rgb(0, 0, 0);
+    padding: 0 5px 25px;
+  }
+  
+  .social {
+    column-gap: 20px;
+  }
+  
+  .icon {
+    max-width: 40px;
+    max-height: 40px;
+    fill: rgb(255, 61, 71);
+  }
+
+  .fs {
+    font-size: 18px;
+    color: rgba(255, 255, 255, 1);
+    font-weight: 100;
+    padding-right: 8px;
+  }
+  .fz {
+    color: rgba(255, 255, 255, 1);
+    display: flex;
+    align-items: center;
+    font-weight: 100;
+    padding-left: 8px;
+    
+  }
+  }
